# ray

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CellCalculations.ixx  Constants.ixx  FlipFluid.cxx  FlipFluid.ixx  LICENSE  Module1.ixx  README.md  Ray.h  bvh_node.cpp  bvh_node.h  calc.cpp  calc.h  camera.h  fluid.cpp  fluid.h  fluid.ui  format.ixx  hitPosition.cpp  hitPosition.h  main.cpp  mdspan.ixx  ray1.pro  rayview.cpp  rayview.h  rayview.ui  rayview_rtiow.cpp  rayview_rtiow.h  rayview_rtiow.ui  shapes.h
fluid/: BaseStructures.ixx  CellCalculations.ixx  CellColor.ixx  CellVelocities.ixx  Constants.ixx  Obstacle.ixx  ParticleCollision.ixx  ParticleColor.ixx  ParticleDensity.ixx  ParticleIncompressibility.ixx  ParticleIntegration.ixx  ParticleVelocities.ixx  PushParticles.ixx
